# opentitan

./: .gitignore  meson.build  vivado_split.py
hw/: Makefile
hw/ip/ddr_ctrl/: ddr_ctrl.core
hw/ip/ddr_ctrl/data/: ddr_ctrl.hjson  ddr_ctrl.prj.hjson  ddr_ctrl_testplan.hjson
hw/ip/ddr_ctrl/lint/: ddr_ctrl.vlt  ddr_ctrl.waiver
hw/ip/ddr_ctrl/rtl/: ddr_ctrl.sv  ddr_ctrl_pkg.sv  ddr_ctrl_reg_pkg.sv  ddr_ctrl_reg_top.sv  ddr_ctrl_rxf_ctrl.sv  ddrif.v  ddrif_dla.v  ddrif_ui.v
hw/ip/dla/: dla.core
hw/ip/dla/data/: dla.hjson  dla.prj.hjson  dla_testplan.hjson
hw/ip/dla/lint/: dla.vlt  dla.waiver
hw/ip/dla/rtl/: INC_global.v  async_fifo.v  chip_host.sv  ddr_ram_interface.sv  dla.sv  dla_reg_pkg.sv  dla_reg_top.sv  tlul2axi4_host.sv
hw/ip/dla/rtl/ddr_ctrl/: ddr_ctrl_rxf_ctrl.sv
hw/ip/vec_dot/: vec_dot.core
hw/ip/vec_dot/data/: vec_dot.hjson  vec_dot.prj.hjson  vec_dot_testplan.hjson
hw/ip/vec_dot/rtl/: vec_dot.sv  vec_dot_core.sv  vec_dot_reg_pkg.sv  vec_dot_reg_top.sv
hw/top_earlgrey/: top_earlgrey.core  top_earlgrey_nexysvideo.core
hw/top_earlgrey/data/: clocks.xdc  pins_nexysvideo.xdc  placement.xdc  top_earlgrey.hjson  xbar_main.hjson
hw/top_earlgrey/data/autogen/: top_earlgrey.gen.hjson
hw/top_earlgrey/dv/autogen/: tb__xbar_connect.sv  xbar_env_pkg__params.sv
hw/top_earlgrey/ip/clkmgr/data/autogen/: clkmgr.hjson
hw/top_earlgrey/ip/clkmgr/rtl/autogen/: clkmgr.sv  clkmgr_pkg.sv  clkmgr_reg_pkg.sv  clkmgr_reg_top.sv
hw/top_earlgrey/ip/xbar_main/data/autogen/: xbar_main.gen.hjson  xbar_main.hjson
hw/top_earlgrey/ip/xbar_main/dv/autogen/: tb__xbar_connect.sv  xbar_env_pkg__params.sv  xbar_main_bind.sv
hw/top_earlgrey/ip/xbar_main/rtl/autogen/: tl_main_pkg.sv  xbar_main.sv
hw/top_earlgrey/rtl/: clkgen_xil7series.sv  top_earlgrey_nexysvideo.sv
hw/top_earlgrey/rtl/autogen/: top_earlgrey.sv  top_earlgrey_pkg.sv
hw/top_earlgrey/sw/autogen/: top_earlgrey.c  top_earlgrey.h
hw/top_earlgrey/util/: vivado_axi_chip2chip_host.tcl  vivado_ddrif_fifo_h2u.tcl  vivado_ddrif_fifo_u2h.tcl  vivado_gen_ip.tcl  vivado_mig7.prj  vivado_setup_hooks.tcl
sw/device/examples/: meson.build
sw/device/examples/grunet/: grunet.c  meson.build
sw/device/examples/hello_world/: hello_world.c  meson.build
sw/device/examples/lpcnet1/: lpcnet1.c  meson.build
sw/device/examples/lpcnet2/: lpcnet2.c  meson.build
sw/device/examples/lstm/: README.md  lstm.c  meson.build
sw/device/examples/wavenet/: README.md  meson.build  wavenet.c
sw/device/lib/: ddr_spi.c  ddr_spi.h  meson.build
sw/device/lib/dif/: dif_ddr_ctrl.c  dif_ddr_ctrl.h  dif_ddr_ctrl.md  dif_dla.c  dif_dla.h  dif_dla.md  dif_vec_dot.c  dif_vec_dot.h  dif_vec_dot.md  meson.build
util/simplespi/: grunet_ddr_in.txt  grunet_ddr_out.txt  lpcnet1_ddr_in.txt  lpcnet1_ddr_out.txt  lpcnet2_ddr_in.txt  lpcnet2_ddr_out.txt  lstm_ddr_in.txt  lstm_ddr_out.txt  spitest.py  wavenet_ddr_in.txt  wavenet_ddr_out.txt  weight.txt  weight_512.txt
